[package]
name = "mqtt-async-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
futures-util = "0.3.28"
indexmap = "2.0.0"
log = "0.4.19"
logger = "0.4.0"
pretty_env_logger = "0.5.0"
rumqttc = "0.22.0"
tokio = {version="1.29.1", features = ["full", "macros"]}
tokio-rustls = "0.24.1"
